==> bouffalolab/bouffalo_sdk/components/crypto/mbedtls/port/hw_acc/aes_alt.c <==
#include "common.h"
#include <string.h>
#include "mbedtls/aes.h"
#include "mbedtls/platform.h"
#include "mbedtls/platform_util.h"
#include "mbedtls/error.h"
#include "mbedtls/padlock.h"
#include "mbedtls/aesni.h"
#include "mbedtls/platform.h"
#include "sec_mutex.h"
#define AES_VALIDATE_RET( cond )    \
    MBEDTLS_INTERNAL_VALIDATE_RET( cond, MBEDTLS_ERR_AES_BAD_INPUT_DATA )
#define AES_VALIDATE( cond )        \
    MBEDTLS_INTERNAL_VALIDATE( cond )

int mbedtls_aes_setkey_enc( mbedtls_aes_context *ctx, const unsigned char *key,
                    unsigned int keybits )
{
    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( key != NULL );

    ctx->link_ctx.aes_dec_en = 0;

    if(keybits == 128)
    {
        ctx->link_ctx.aes_key = AES_LINK_KEY_128BITS;
    }
    else if(keybits == 192)
    {
        ctx->link_ctx.aes_key = AES_LINK_KEY_192BITS;
    }
    else if(keybits == 256)
    {
        ctx->link_ctx.aes_key = AES_LINK_KEY_256BITS;
    }
    else
    {
        return -1;
    }

    memcpy(&ctx->link_ctx.aes_key0, key, keybits / 8);
    return( 0 );
}

int mbedtls_aes_setkey_dec( mbedtls_aes_context *ctx, const unsigned char *key,
                    unsigned int keybits )
{
    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( key != NULL );

    ctx->link_ctx.aes_dec_en = 1;

    if(keybits == 128)
    {
        ctx->link_ctx.aes_key = AES_LINK_KEY_128BITS;
    }
    else if(keybits == 192)
    {
        ctx->link_ctx.aes_key = AES_LINK_KEY_192BITS;
    }
    else if(keybits == 256)
    {
        ctx->link_ctx.aes_key = AES_LINK_KEY_256BITS;
    }
    else
    {
        return -1;
    }

    memcpy(&ctx->link_ctx.aes_key0, key, keybits / 8);
    return( 0 );
}

int mbedtls_internal_aes_encrypt( mbedtls_aes_context *ctx,
                                  const unsigned char input[16],
                                  unsigned char output[16] )
{
    ctx->link_ctx.aes_mode = AES_MODE_ECB;
    memset(&ctx->link_ctx.aes_iv0, 0, 16);

    bflb_sec_aes_mutex_take();
    memcpy(ecb_enc_buf, input, 16);
    memcpy(&link_ctx_temp, &ctx->link_ctx, sizeof(struct bflb_aes_link_s));
    bflb_aes_link_update(ctx->aes, (uint32_t)&link_ctx_temp, ecb_enc_buf, ecb_dec_buf, 16);
    memcpy(&ctx->link_ctx, &link_ctx_temp, sizeof(struct bflb_aes_link_s));
    memcpy(output, ecb_dec_buf, 16);
    bflb_sec_aes_mutex_give();

    return( 0 );
}

int mbedtls_internal_aes_decrypt( mbedtls_aes_context *ctx,
                                  const unsigned char input[16],
                                  unsigned char output[16] )
{
    ctx->link_ctx.aes_mode = AES_MODE_ECB;
    memset(&ctx->link_ctx.aes_iv0, 0, 16);

    bflb_sec_aes_mutex_take();
    memcpy(ecb_enc_buf, input, 16);
    memcpy(&link_ctx_temp, &ctx->link_ctx, sizeof(struct bflb_aes_link_s));
    bflb_aes_link_update(ctx->aes, (uint32_t)&link_ctx_temp, ecb_enc_buf, ecb_dec_buf, 16);
    memcpy(&ctx->link_ctx, &link_ctx_temp, sizeof(struct bflb_aes_link_s));
    memcpy(output, ecb_dec_buf, 16);
    bflb_sec_aes_mutex_give();

    return( 0 );
}

int mbedtls_aes_crypt_ecb( mbedtls_aes_context *ctx,
                           int mode,
                           const unsigned char input[16],
                           unsigned char output[16] )
{
    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( input != NULL );
    AES_VALIDATE_RET( output != NULL );
    AES_VALIDATE_RET( mode == MBEDTLS_AES_ENCRYPT ||
                      mode == MBEDTLS_AES_DECRYPT );

#if defined(MBEDTLS_AESNI_C) && defined(MBEDTLS_HAVE_X86_64)
    if( mbedtls_aesni_has_support( MBEDTLS_AESNI_AES ) )
        return( mbedtls_aesni_crypt_ecb( ctx, mode, input, output ) );
#endif

#if defined(MBEDTLS_PADLOCK_C) && defined(MBEDTLS_HAVE_X86)
    if( aes_padlock_ace )
    {
        if( mbedtls_padlock_xcryptecb( ctx, mode, input, output ) == 0 )
            return( 0 );

        // If padlock data misaligned, we just fall back to
        // unaccelerated mode
        //
    }
#endif

    if( mode == MBEDTLS_AES_ENCRYPT )
        return( mbedtls_internal_aes_encrypt( ctx, input, output ) );
    else
        return( mbedtls_internal_aes_decrypt( ctx, input, output ) );
}

int mbedtls_aes_crypt_cbc( mbedtls_aes_context *ctx,
                    int mode,
                    size_t length,
                    unsigned char iv[16],
                    const unsigned char *input,
                    unsigned char *output )
{
    //int ret = MBEDTLS_ERR_ERROR_CORRUPTION_DETECTED;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( mode == MBEDTLS_AES_ENCRYPT ||
                      mode == MBEDTLS_AES_DECRYPT );
    AES_VALIDATE_RET( iv != NULL );
    AES_VALIDATE_RET( input != NULL );
    AES_VALIDATE_RET( output != NULL );

    if( length % 16 )
        return( MBEDTLS_ERR_AES_INVALID_INPUT_LENGTH );

#if defined(MBEDTLS_PADLOCK_C) && defined(MBEDTLS_HAVE_X86)
    if( aes_padlock_ace )
    {
        if( mbedtls_padlock_xcryptcbc( ctx, mode, length, iv, input, output ) == 0 )
            return( 0 );

        // If padlock data misaligned, we just fall back to
        // unaccelerated mode
        //
    }
#endif
    ctx->link_ctx.aes_mode = AES_MODE_CBC;
    memcpy(&ctx->link_ctx.aes_iv0, iv, 16);

    bflb_l1c_dcache_clean_invalidate_range((void *)input, length);
    bflb_l1c_dcache_clean_invalidate_range((void *)output, length);

    bflb_sec_aes_mutex_take();
    if( mode == MBEDTLS_AES_DECRYPT )
    {
        memcpy(&link_ctx_temp, &ctx->link_ctx, sizeof(struct bflb_aes_link_s));
        bflb_aes_link_update(ctx->aes, (uint32_t)&link_ctx_temp, input, output, length);
        memcpy(&ctx->link_ctx, &link_ctx_temp, sizeof(struct bflb_aes_link_s));
    }
    else
    {
        memcpy(&link_ctx_temp, &ctx->link_ctx, sizeof(struct bflb_aes_link_s));
        bflb_aes_link_update(ctx->aes, (uint32_t)&link_ctx_temp, input, output, length);
        memcpy(&ctx->link_ctx, &link_ctx_temp, sizeof(struct bflb_aes_link_s));
    }
    bflb_sec_aes_mutex_give();
    return( 0 );
}

static void mbedtls_gf128mul_x_ble( unsigned char r[16],
                                    const unsigned char x[16] )
{
    uint64_t a, b, ra, rb;

    a = MBEDTLS_GET_UINT64_LE( x, 0 );
    b = MBEDTLS_GET_UINT64_LE( x, 8 );

    ra = ( a << 1 )  ^ 0x0087 >> ( 8 - ( ( b >> 63 ) << 3 ) );
    rb = ( a >> 63 ) | ( b << 1 );

    MBEDTLS_PUT_UINT64_LE( ra, r, 0 );
    MBEDTLS_PUT_UINT64_LE( rb, r, 8 );
}
